# SwiftPDF

./: .gitignore  CLAUDE.md  README.md  logo-options.html  package-lock.json  package.json  titlebar-options.html
.github/workflows/: release.yml
.serena/: project.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/pdf/: document.rs  dto.rs  engine.rs  mod.rs  pages.rs  render.rs  stamp.rs  testutil.rs  worker.rs
src/lib/: api.ts  fileDrop.ts  ranges.ts  thumbnails.ts  updater.svelte.ts
src/lib/components/: AppIcon.svelte  DropOverlay.svelte  Logo.svelte  SignatureModal.svelte  Thumbnail.svelte  TitleBar.svelte  UpdateBanner.svelte  ViewerIcon.svelte
src/lib/stores/: document.svelte.ts  droppedFiles.ts  signatures.svelte.ts  viewer.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/merge/: +page.svelte
src/routes/organize/: +page.svelte
src/routes/sign/: +page.svelte
src/routes/split/: +page.svelte
src/routes/view/: +page.svelte
